data/all_generated_tests/raw_wast_tests/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_107.wast
;; 8. **Cross-Module Exception Handling within a Block**    - Use a block to wrap calls to imported functions prone to cause exceptions, handle those exceptions and ensure control flow resumes correctly.    - Examines mechanisms around control transfer during exceptions, ensuring stack states, and control markers are properly managed.

(assert_invalid
  (module
    (import "env" "may_throw" (func $may_throw (result i32)))
    (func $test
      (block (result i32)
        (call $may_throw)
        (br_if 0 (i32.eqz))
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)